--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "url": "git+https://github.com/southbridgeai/zodsheriff.git"
   },
   "main": "./dist/index.cjs",
+  "bin": {
+    "zodsheriff": "./dist/run.js"
+  },
   "module": "./dist/index.js",
   "devDependencies": {
     "@swc/core": "^1.7.26",
     "@types/bun": "^1.1.10",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.7.4",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "tsup": "^8.3.0",
     "typescript": "^5.6.2"
   },
@@ -34,7 +40,10 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "build": "tsup src/index.ts && tsc --emitDeclarationOnly --declaration --declarationDir dist && mv dist/index.d.ts dist/index.d.mts && cp dist/index.d.mts dist/index.d.cts"
+    "build": "tsup src/index.ts src/run.ts && tsc --emitDeclarationOnly --declaration --declarationDir dist && mv dist/index.d.ts dist/index.d.mts && cp dist/index.d.mts dist/index.d.cts",
+    "test": "jest",
+    "lint": "eslint src/**/*.ts",
+    "cli": "node dist/run.js"
   },
   "type": "module",
   "types": "./dist/index.d.cts",
@@ -42,6 +51,7 @@
     "@babel/generator": "^7.26.3",
     "@babel/parser": "^7.26.3",
     "@babel/traverse": "^7.26.4",
+    "clipboardy": "^4.0.0",
     "safe-regex": "^2.1.1"
   }
 }
