--- a/package.json
+++ b/package.json
@@ -39,11 +39,10 @@
     "dist",
     "package.json"
   ],
-  "license": "Apache-2.0",
+  "license": "CC By-NC 4.0",
   "scripts": {
     "build": "tsup src/index.ts src/run.ts && tsc --emitDeclarationOnly --declaration --declarationDir dist && mv dist/index.d.ts dist/index.d.mts && cp dist/index.d.mts dist/index.d.cts",
     "test": "jest",
-    "lint": "eslint src/**/*.ts",
     "cli": "node dist/run.js"
   },
   "type": "module",
